[GTK] Fix remaining introspection warnings https://bugs.webkit.org/show_bug.cgi?id=114980

Reviewed by Gustavo Noronha Silva.

Source/WebCore:

* bindings/gobject/WebKitDOMCustom.h: Add scope and transfer annotations and flesh
out gtkdoc for completeness.
* bindings/gobject/WebKitDOMEventTarget.h:
(_WebKitDOMEventTargetIface): Ditto and also align virtual method names with those used
for the concrete ones.

Source/WebKit/gtk:

* webkit/webkitspellchecker.h:
(_WebKitSpellCheckerInterface): Align the name of the check_spelling_of_string virtual
method with the concrete method to avoid a g-ir-scanner warning.
* webkit/webkitversion.h.in: Skip WEBKITGTK_API_VERSION for introspection because it
doesn't follow the appropriate namespace name.

Canonical link: https://commits.webkit.org/133415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148914 268f45cc-cd09-0410-ab3c-d52691b4dbfc