Source/WebCore/bindings/gobject/WebKitDOMCustom.h
@@ -24,20 +24,107 @@
 
 G_BEGIN_DECLS
 
-WEBKIT_API gboolean webkit_dom_html_text_area_element_is_edited(WebKitDOMHTMLTextAreaElement*);
-WEBKIT_API gboolean webkit_dom_html_input_element_is_edited(WebKitDOMHTMLInputElement*);
+/**
+ * webkit_dom_html_text_area_element_is_edited:
+ * @input: A #WebKitDOMHTMLTextAreaElement
+ *
+ */
+WEBKIT_API gboolean webkit_dom_html_text_area_element_is_edited(WebKitDOMHTMLTextAreaElement* input);
 
-/* Compatibility */
+/**
+ * webkit_dom_html_input_element_is_edited:
+ * @input: A #WebKitDOMHTMLInputElement
+ *
+ */
+WEBKIT_API gboolean webkit_dom_html_input_element_is_edited(WebKitDOMHTMLInputElement* input);
+
+/**
+ * webkit_dom_blob_webkit_slice:
+ * @self: A #WebKitDOMBlob
+ * @start: A #gint64
+ * @end: A #gint64
+ * @content_type: A #gchar
+ *
+ * Returns: (transfer none):
+ */
 WEBKIT_API WebKitDOMBlob* webkit_dom_blob_webkit_slice(WebKitDOMBlob* self, gint64 start, gint64 end, const gchar* content_type);
+
+/**
+ * webkit_dom_html_element_get_class_name:
+ * @element: A #WebKitDOMHTMLElement
+ *
+ * Returns:
+ *
+ */
 WEBKIT_API gchar* webkit_dom_html_element_get_class_name(WebKitDOMHTMLElement* element);
+
+/**
+ * webkit_dom_html_element_set_class_name:
+ * @element: A #WebKitDOMHTMLElement
+ * @value: A #gchar
+ *
+ */
 WEBKIT_API void webkit_dom_html_element_set_class_name(WebKitDOMHTMLElement* element, const gchar* value);
+
+/**
+ * webkit_dom_html_element_get_class_list:
+ * @element: A #WebKitDOMHTMLElement
+ *
+ * Returns: (transfer none):
+ *
+ */
 WEBKIT_API WebKitDOMDOMTokenList* webkit_dom_html_element_get_class_list(WebKitDOMHTMLElement* element);
+
+/**
+ * webkit_dom_html_form_element_dispatch_form_change:
+ * @self: A #WebKitDOMHTMLFormElement
+ *
+ */
 WEBKIT_API void webkit_dom_html_form_element_dispatch_form_change(WebKitDOMHTMLFormElement* self);
+
+/**
+ * webkit_dom_html_form_element_dispatch_form_input:
+ * @self: A #WebKitDOMHTMLFormElement
+ *
+ */
 WEBKIT_API void webkit_dom_html_form_element_dispatch_form_input(WebKitDOMHTMLFormElement* self);
+
+/**
+ * webkit_dom_webkit_named_flow_get_overflow:
+ * @flow: A #WebKitDOMWebKitNamedFlow
+ *
+ * Returns:
+ *
+ */
 WEBKIT_API gboolean webkit_dom_webkit_named_flow_get_overflow(WebKitDOMWebKitNamedFlow* flow);
+
+/**
+ * webkit_dom_element_get_webkit_region_overflow:
+ * @element: A #WebKitDOMElement
+ *
+ * Returns:
+ *
+ */
 WEBKIT_API gchar* webkit_dom_element_get_webkit_region_overflow(WebKitDOMElement* element);
-WEBKIT_API WebKitDOMNodeList* webkit_dom_webkit_named_flow_get_content_nodes(WebKitDOMWebKitNamedFlow* namedFlow);
-WEBKIT_API WebKitDOMNodeList* webkit_dom_webkit_named_flow_get_regions_by_content_node(WebKitDOMWebKitNamedFlow* namedFlow, WebKitDOMNode* contentNode);
+
+/**
+ * webkit_dom_webkit_named_flow_get_content_nodes:
+ * @flow: A #WebKitDOMWebKitNamedFlow
+ *
+ * Returns: (transfer none):
+ *
+ */
+WEBKIT_API WebKitDOMNodeList* webkit_dom_webkit_named_flow_get_content_nodes(WebKitDOMWebKitNamedFlow* flow);
+
+/**
+ * webkit_dom_webkit_named_flow_get_regions_by_content_node:
+ * @flow: A #WebKitDOMWebKitNamedFlow
+ * @content_node: A #WebKitDOMNode
+ *
+ * Returns: (transfer none):
+ *
+ */
+WEBKIT_API WebKitDOMNodeList* webkit_dom_webkit_named_flow_get_regions_by_content_node(WebKitDOMWebKitNamedFlow* flow, WebKitDOMNode* content_node);
 
 G_END_DECLS
 
